base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: code-with-quarkus
  labels:
    app: code-with-quarkus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: code-with-quarkus
  template:
    metadata:
      labels:
        app: code-with-quarkus
    spec:
      containers:
        - name: code-with-quarkus
          image: quarkus
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
