base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: code-with-quarkus
  labels:
    app: code-with-quarkus
spec:
  to:
    kind: Service
    name: code-with-quarkus
    weight: 100
  tls:
    termination: edge
  wildcardPolicy: None
